methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:14: error: not found: value tr
      vuBiscuit=tr
                ^